# ocaml-libfixmath

./: .gitignore  libfixmath.opam
src/: dune  fix16.ml  fix16.mli  libfixmath_stubs.c
test/: dune  logaverage.ml  test.ml
